fix: word wrap in logo and profile-user

--- a/projects/ng-mat-components/src/fs-nav-frame/fs-nav-frame.component.scss
+++ b/projects/ng-mat-components/src/fs-nav-frame/fs-nav-frame.component.scss
@@ -41,6 +41,8 @@
 
     .app-name {
       font-size: 1.2rem;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     .app-version {
